--- a/AnperoFrontend/AnperoFrontend.csproj
+++ b/AnperoFrontend/AnperoFrontend.csproj
@@ -1069,6 +1069,7 @@
   <ItemGroup>
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
+    <None Include="Properties\PublishProfiles\Shoes Store.pubxml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
