--- a/AnperoFrontend/Web.config
+++ b/AnperoFrontend/Web.config
@@ -18,14 +18,36 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.5" />
+    <authentication mode="None" />    
+    <compilation debug="true" targetFramework="4.5">
+      <assemblies>
+        <remove assembly="Microsoft.VisualStudio.Web.PageInspector.Loader, Version=1.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+      </assemblies>
+    </compilation>
     <httpRuntime targetFramework="4.5" />
+    <customErrors defaultRedirect="~/" mode="Off">
+      <error statusCode="404" redirect="~/404.htm" />
+      <error statusCode="500" redirect="~/500.htm" />
+    </customErrors>
   </system.web>
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
+    <staticContent>
+      <remove fileExtension=".svg" />
+      <remove fileExtension=".eot" />
+      <remove fileExtension=".woff" />
+      <remove fileExtension=".woff2" />
+      <remove fileExtension=".otf" />
+      <remove fileExtension=".ttf" />
+      <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
+      <mimeMap fileExtension=".otf" mimeType="application/x-font-woff" />
+      <mimeMap fileExtension=".eot" mimeType="application/vnd.ms-fontobject" />
+      <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+      <mimeMap fileExtension=".woff2" mimeType="font/woff2" />
+      <mimeMap fileExtension=".ttf" mimeType="application/font-ttf" />
+    </staticContent>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
