--- a/AnperoFrontend/bin/AnperoFrontend.dll.config
+++ b/AnperoFrontend/bin/AnperoFrontend.dll.config
@@ -7,6 +7,9 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="AnperoFrontend.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-AnperoFrontend-1441b234-e465-43cc-860f-2bad332008af;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-AnperoFrontend-1441b234-e465-43cc-860f-2bad332008af.mdf" providerName="System.Data.SqlClient" />
@@ -16,16 +19,39 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="storeID" value="24" />
+    <add key="storeTokenKey" value="344c74a3-71ad-42b7-96d4-4c6d5989c90b" />
   </appSettings>
   <system.web>
-    <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
+    <authentication mode="None" />    
+    <compilation debug="true" targetFramework="4.5">
+      <assemblies>
+        <remove assembly="Microsoft.VisualStudio.Web.PageInspector.Loader, Version=1.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+      </assemblies>
+    </compilation>    
+    <customErrors defaultRedirect="~/" mode="Off">
+      <error statusCode="404" redirect="~/404.htm" />
+      <error statusCode="500" redirect="~/500.htm" />
+    </customErrors>
   </system.web>
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
+    <staticContent>
+      <remove fileExtension=".svg" />
+      <remove fileExtension=".eot" />
+      <remove fileExtension=".woff" />
+      <remove fileExtension=".woff2" />
+      <remove fileExtension=".otf" />
+      <remove fileExtension=".ttf" />
+      <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
+      <mimeMap fileExtension=".otf" mimeType="application/x-font-woff" />
+      <mimeMap fileExtension=".eot" mimeType="application/vnd.ms-fontobject" />
+      <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+      <mimeMap fileExtension=".woff2" mimeType="font/woff2" />
+      <mimeMap fileExtension=".ttf" mimeType="application/font-ttf" />
+    </staticContent>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -81,4 +107,11 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <applicationSettings>
+    <AnperoFrontend.Properties.Settings>
+      <setting name="AnperoFrontend_AnperoService_AnperoService" serializeAs="String">
+        <value>http://anpero.azurewebsites.net/AnperoService.asmx</value>
+      </setting>
+    </AnperoFrontend.Properties.Settings>
+  </applicationSettings>
 </configuration>
