--- a/Anpero/Anpero.csproj
+++ b/Anpero/Anpero.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommonConfig.cs" />
     <Compile Include="Paging.cs" />
     <Compile Include="StringHelpper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
