--- a/AnperoFrontend/bin/AnperoFrontend.dll.config
+++ b/AnperoFrontend/bin/AnperoFrontend.dll.config
@@ -109,8 +109,8 @@
   </entityFramework>
   <applicationSettings>
     <AnperoFrontend.Properties.Settings>
-      <setting name="AnperoFrontend_AnperoService_AnperoService" serializeAs="String">
-        <value>http://anpero.azurewebsites.net/AnperoService.asmx</value>
+      <setting name="AnperoFrontend_AnperoService_AnperoService" serializeAs="String">        
+        <value>http://wsv.anpero.com/AnperoService.asmx</value>
       </setting>
     </AnperoFrontend.Properties.Settings>
   </applicationSettings>
