--- a/AnperoFrontend/Web.config
+++ b/AnperoFrontend/Web.config
@@ -19,6 +19,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="shortCacheTime" value="5" />
     <add key="storeID" value="29" />
     <add key="storeTokenKey" value="f7991f45-6bdf-442c-9b00-404ef4555834" />
   </appSettings>
@@ -109,7 +110,7 @@
   </entityFramework>
   <applicationSettings>
     <AnperoFrontend.Properties.Settings>
-      <setting name="AnperoFrontend_AnperoService_AnperoService" serializeAs="String">        
+      <setting name="AnperoFrontend_AnperoService_AnperoService" serializeAs="String">
         <value>http://wsv.anpero.com/AnperoService.asmx</value>
       </setting>
     </AnperoFrontend.Properties.Settings>
