--- a/Anpero/Anpero.csproj
+++ b/Anpero/Anpero.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Paging.cs" />
+    <Compile Include="SearchResult.cs" />
     <Compile Include="StringHelpper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
