--- a/AnperoFrontend/AnperoFrontend.csproj
+++ b/AnperoFrontend/AnperoFrontend.csproj
@@ -1005,6 +1005,7 @@
     </None>
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Product\Index.cshtml" />
+    <Content Include="Views\Shared\product\_MenuAndAdsPartial.cshtml" />
     <None Include="Web References\WebService\AnperoService.disco" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
