--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ AnperoFrontend/obj/Debug/AnperoFrontend.csproj.FileListAbsolute.txt
 AnperoFrontend/bin/AnperoFrontend.pdb
 AnperoFrontend/bin/AnperoFrontend.dll.config
 AnperoFrontend/bin/AnperoFrontend.dll
+AnperoFrontend/bin/Anpero.dll
+.vs/config/applicationhost.config
+AnperoFrontend/obj/
+AnperoFrontend/bin/Anpero.pdb
