--- a/AnperoFrontend/Web.config
+++ b/AnperoFrontend/Web.config
@@ -92,6 +92,22 @@
           </conditions>
           <action type="Rewrite" url="product?id={R:2}"/>
         </rule>
+      <rule name="blogList" stopProcessing="true">
+          <match url="^([^/]+)-b(\d+)?$"/>
+          <conditions>
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true"/>
+          </conditions>
+          <action type="Rewrite" url="Article/Category?id={R:2}"/>
+        </rule>
+       <rule name="blogList2" stopProcessing="true">
+          <match url="^blogs$"/>
+          <conditions>
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true"/>
+          </conditions>
+          <action type="Rewrite" url="Article/Category?id=0"/>
+        </rule>
       </rules>
     </rewrite>
   </system.webServer>
