update some text and label + price label

--- a/HR_Service_Frontend_01/Web.config
+++ b/HR_Service_Frontend_01/Web.config
@@ -108,8 +108,16 @@
           </conditions>
           <action type="Rewrite" url="Article/Category?id={R:2}"/>
         </rule>
+        <rule name="blogList3" stopProcessing="true">
+          <match url="^blog/([^/]+)-b(\d+)?$"/>
+          <conditions>
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true"/>
+          </conditions>
+          <action type="Rewrite" url="Article/Category?id={R:2}"/>
+        </rule>
         <rule name="blogList2" stopProcessing="true">
-          <match url="^blogs$"/>
+          <match url="^blog$"/>
           <conditions>
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true"/>
