--- a/AnperoFrontend/Shop_Frontend_01.csproj
+++ b/AnperoFrontend/Shop_Frontend_01.csproj
@@ -45,7 +45,8 @@
     <GenerateSerializationAssemblies>On</GenerateSerializationAssemblies>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Anpero">
+    <Reference Include="Anpero, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Anpero\bin\Debug\Anpero.dll</HintPath>
     </Reference>
     <Reference Include="Antlr3.Runtime, Version=3.4.1.9004, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
