add shopping cart function

--- a/AnperoFrontend/Shop_Frontend_01.csproj
+++ b/AnperoFrontend/Shop_Frontend_01.csproj
@@ -914,6 +914,7 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+    <Content Include="Scripts\jquery.cokie.min.js" />
     <Content Include="Views\Product\Index.cshtml" />
     <Content Include="Views\Shared\product\_MenuAndAdsPartial.cshtml" />
     <Content Include="Views\Product\Category.cshtml" />
