update shoping cart

--- a/HR_Service_Frontend_01/HR_Frontend_01.csproj
+++ b/HR_Service_Frontend_01/HR_Frontend_01.csproj
@@ -914,6 +914,7 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <Content Include="Scripts\Anpero.Common.js" />
+    <Content Include="Scripts\Bootrap.notify.js" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Scripts\jquery.cokie.min.js" />
     <Content Include="Scripts\ShoppingCart.js" />
