--- a/HR_Service_Frontend_01/Web.config
+++ b/HR_Service_Frontend_01/Web.config
@@ -124,6 +124,14 @@
           </conditions>
           <action type="Rewrite" url="Article/Category?id=0"/>
         </rule>
+        <rule name="CheckOut" stopProcessing="true">
+          <match url="^checkout"/>
+          <conditions>
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true"/>
+          </conditions>
+          <action type="Rewrite" url="product/checkout"/>
+        </rule>
       </rules>
     </rewrite>
   </system.webServer>
