add google recaptcha

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ AnperoFrontend/bin/Anpero.dll
 .vs/config/applicationhost.config
 AnperoFrontend/obj/
 AnperoFrontend/bin/Anpero.pdb
+AnperoFrontend/bin/
+HR_Service_Frontend_01/obj/
