--- a/HR_Service_Frontend_01/HR_Frontend_01.csproj
+++ b/HR_Service_Frontend_01/HR_Frontend_01.csproj
@@ -127,6 +127,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="handler\ProductHandler.ashx.cs">
+      <DependentUpon>ProductHandler.ashx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -908,6 +911,7 @@
     <Content Include="index6.html" />
     <Content Include="login.html" />
     <Content Include="order.html" />
+    <Content Include="handler\ProductHandler.ashx" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
