--- a/AnperoFrontend/Web.config
+++ b/AnperoFrontend/Web.config
@@ -58,7 +58,7 @@
       <mimeMap fileExtension=".woff2" mimeType="font/woff2"/>
       <mimeMap fileExtension=".ttf" mimeType="application/font-ttf"/>
     </staticContent>
-    <rewrite>
+     <rewrite>
       <rules>
         <rule name="Article" stopProcessing="true">
           <match url="^([^/]+)-a(\d+)$"/>
@@ -92,6 +92,14 @@
           </conditions>
           <action type="Rewrite" url="product/ParentCategory?id={R:2}"/>
         </rule>
+        <rule name="Search_rw" stopProcessing="true">
+          <match url="^search$"/>
+          <conditions>
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true"/>
+          </conditions>
+          <action type="Rewrite" url="product/search"/>
+        </rule>
         <rule name="productDetail" stopProcessing="true">
           <match url="^([^/]+)-p(\d+)?$"/>
           <conditions>
@@ -108,7 +116,7 @@
           </conditions>
           <action type="Rewrite" url="Article/Category?id={R:2}"/>
         </rule>
-         <rule name="blogList3" stopProcessing="true">
+        <rule name="blogList3" stopProcessing="true">
           <match url="^blog/([^/]+)-b(\d+)?$"/>
           <conditions>
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
@@ -123,6 +131,14 @@
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true"/>
           </conditions>
           <action type="Rewrite" url="Article/Category?id=0"/>
+        </rule>
+        <rule name="CheckOut" stopProcessing="true">
+          <match url="^checkout"/>
+          <conditions>
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true"/>
+          </conditions>
+          <action type="Rewrite" url="product/checkout"/>
         </rule>
       </rules>
     </rewrite>
