--- a/HR_Service_Frontend_01/Web.config
+++ b/HR_Service_Frontend_01/Web.config
@@ -92,6 +92,14 @@
           </conditions>
           <action type="Rewrite" url="product/ParentCategory?id={R:2}"/>
         </rule>
+        <rule name="Search_rw" stopProcessing="true">
+          <match url="^search$"/>
+          <conditions>
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true"/>
+          </conditions>
+          <action type="Rewrite" url="product/search"/>
+        </rule>
         <rule name="productDetail" stopProcessing="true">
           <match url="^([^/]+)-p(\d+)?$"/>
           <conditions>
