update shopping cart

--- a/HR_Service_Frontend_01/HR_Frontend_01.csproj
+++ b/HR_Service_Frontend_01/HR_Frontend_01.csproj
@@ -742,6 +742,7 @@
     <Content Include="assets\images\kak3.png" />
     <Content Include="assets\images\latest-deal-title.png" />
     <Content Include="assets\images\list-view-bg.png" />
+    <Content Include="assets\images\loading.gif" />
     <Content Include="assets\images\logo.png" />
     <Content Include="assets\images\logo2.png" />
     <Content Include="assets\images\next.png" />
@@ -855,7 +856,6 @@
     <Content Include="category2.html" />
     <Content Include="checkout.html" />
     <Content Include="compare.html" />
-    <Content Include="contact.html" />
     <Content Include="detail.html" />
     <Content Include="detail2.html" />
     <Content Include="detail3.html" />
