--- a/AnperoFrontend/Web.config
+++ b/AnperoFrontend/Web.config
@@ -16,17 +16,10 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="shortCacheTime" value="5"/>
-    <add key="storeID" value="29"/>
-    <add key="storeTokenKey" value="f7991f45-6bdf-442c-9b00-404ef4555834"/>
-  </appSettings>
-  <!--
-    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
-
-    The following attributes can be set on the <httpRuntime> tag.
-      <system.Web>
-        <httpRuntime targetFramework="4.5" />
-      </system.Web>
-  -->
+    <!--29|f7991f45-6bdf-442c-9b00-404ef4555834-->
+    <add key="storeID" value="34"/>
+    <add key="storeTokenKey" value="0d115ff6-dbfb-4da2-868f-3538d01073c5"/>
+  </appSettings> 
   <system.web>
     <authentication mode="None"/>
     <compilation debug="true" targetFramework="4.5.2">
