--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ AnperoFrontend/obj/
 AnperoFrontend/bin/Anpero.pdb
 AnperoFrontend/bin/
 HR_Service_Frontend_01/obj/
+HR_Service_Frontend_01/bin/Anpero.dll
