update ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@ Anpero/bin/
 AnperoWeb/obj/
 Anpero/obj/Release/
 AnperoFrontend/obj/Release/
+HR_Service_Frontend_01/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+HR_Service_Frontend_01/bin/Anpero.dll
+AnperoFrontend/obj/Debug/Shop_Frontend_01.csprojResolveAssemblyReference.cache
+AnperoFrontend/obj/Debug/Shop_Frontend_01.csproj.FileListAbsolute.txt
+AnperoFrontend/obj/Debug/AnperoFrontend_01.csprojResolveAssemblyReference.cache
+AnperoFrontend/obj/Debug/AnperoFrontend_01.csproj.FileListAbsolute.txt
