add shop3 project to solution

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ Shop_01_multiProduct/obj/Debug/AnperoFrontend.dll
 Shop_02_Onepage/obj/
 HR_Service_Frontend_01/bin/
 Shop_01_multiProduct/obj/
+Shop_03_multiProduct/bin/
+Shop_03_multiProduct/obj/Debug/
