delete unuse file

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ HR_Service_Frontend_01/bin/
 Shop_01_multiProduct/obj/
 Shop_03_multiProduct/bin/
 Shop_03_multiProduct/obj/Debug/
+BDS_04_BatDongSan_MultiLand/bin/
