--- a/Shop_03_multiProduct/Shop_03_MultiProduct.csproj
+++ b/Shop_03_multiProduct/Shop_03_MultiProduct.csproj
@@ -323,6 +323,7 @@
     <Content Include="Views\Shared\_partial\_MainHeader_1.cshtml" />
     <Content Include="Views\Shared\_partial\_MainHeader_2.cshtml" />
     <Content Include="Views\Shared\product\_productDetail.cshtml" />
+    <Content Include="Views\Shared\_partial\_MainFooter_1.cshtml" />
     <None Include="Web References\WebService\AnperoService.disco" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
