--- a/BDS_04_BatDongSan_MultiLand/BDS_04_BatDongSan_MultiLand.csproj
+++ b/BDS_04_BatDongSan_MultiLand/BDS_04_BatDongSan_MultiLand.csproj
@@ -128,6 +128,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="handler\LocationHandler.ashx.cs">
+      <DependentUpon>LocationHandler.ashx</DependentUpon>
+    </Compile>
     <Compile Include="handler\ProductHandler.ashx.cs">
       <DependentUpon>ProductHandler.ashx</DependentUpon>
     </Compile>
@@ -912,12 +915,13 @@
     <Content Include="assets\lib\jquery-bxslider\bower.json" />
     <Content Include="assets\lib\jquery-bxslider\readme.md" />
     <Content Include="handler\ProductHandler.ashx" />
+    <Content Include="handler\LocationHandler.ashx" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <Content Include="Scripts\Anpero.Common.js" />
-    <Content Include="Scripts\Bootrap.notify.js" />
+    <Content Include="Scripts\Bootrap-notify.js" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Scripts\jquery.cokie.min.js" />
     <Content Include="Scripts\ShoppingCart.js" />
@@ -936,6 +940,7 @@
     <Content Include="Views\Shared\_partial\_MainHeader_2.cshtml" />
     <Content Include="Views\Shared\product\_productDetail.cshtml" />
     <Content Include="Views\Shared\_partial\_HomeSlide_2.cshtml" />
+    <Content Include="Views\Shared\_partial\_searchBox.cshtml" />
     <None Include="Web References\WebService\AnperoService.disco" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -979,6 +984,9 @@
       <DependentUpon>Reference.map</DependentUpon>
     </Content>
     <Content Include="Web References\WebService\BlogCategory.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </Content>
+    <Content Include="Web References\WebService\Location.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </Content>
     <None Include="Web References\WebService\Reference.map">
