update land template

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ Shop_01_multiProduct/obj/
 Shop_03_multiProduct/bin/
 Shop_03_multiProduct/obj/Debug/
 BDS_04_BatDongSan_MultiLand/bin/
+BDS_04_BatDongSan_MultiLand/obj/
