nothing to update just commit and go home do it

--- a/Shop_02_Onepage/Shop_02_OnePage.csproj
+++ b/Shop_02_Onepage/Shop_02_OnePage.csproj
@@ -244,6 +244,7 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <Content Include="index.html" />
+    <Content Include="Robots.txt" />
     <Content Include="Scripts\Anpero.Common.js" />
     <Content Include="Scripts\Bootrap.notify.js" />
     <Content Include="Scripts\jquery.cokie.min.js" />
