--- a/Shop_03_multiProduct/Shop_03_MultiProduct.csproj
+++ b/Shop_03_multiProduct/Shop_03_MultiProduct.csproj
@@ -280,6 +280,7 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Content Include="Robots.txt" />
     <Content Include="Scripts\Anpero.Common.js" />
     <Content Include="Scripts\Bootrap.notify.js" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
