--- a/Shop_01_multiProduct/Shop_01_MultiProduct.csproj
+++ b/Shop_01_multiProduct/Shop_01_MultiProduct.csproj
@@ -916,6 +916,7 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Content Include="Robots.txt" />
     <Content Include="Scripts\Anpero.Common.js" />
     <Content Include="Scripts\Bootrap.notify.js" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
