--- a/BDS_04_BatDongSan_MultiLand/BDS_04_BatDongSan_MultiLand.csproj
+++ b/BDS_04_BatDongSan_MultiLand/BDS_04_BatDongSan_MultiLand.csproj
@@ -855,7 +855,7 @@
     <Content Include="assets\lib\jquery.countdown\jquery.countdown.js" />
     <Content Include="assets\lib\jquery.countdown\jquery.countdown.min.js" />
     <Content Include="assets\lib\jquery.elevatezoom.js" />
-    <Content Include="assets\lib\jquery\jquery-1.11.2.min.js" />
+    <Content Include="assets\lib\jquery\jquery-1-11-2.js" />
     <Content Include="assets\lib\jquery\jquery-1.5.js" />
     <Content Include="assets\lib\jquery\jquery-ui.js" />
     <Content Include="assets\lib\jqzoom\jquery.jqzoom.css" />
