--- a/BDS_04_BatDongSan_MultiLand/BDS_04_BatDongSan_MultiLand.csproj
+++ b/BDS_04_BatDongSan_MultiLand/BDS_04_BatDongSan_MultiLand.csproj
@@ -752,6 +752,7 @@
     <Content Include="assets\images\loading.gif" />
     <Content Include="assets\images\logo.png" />
     <Content Include="assets\images\logo2.png" />
+    <Content Include="assets\images\new-marker.gif" />
     <Content Include="assets\images\next.png" />
     <Content Include="assets\images\notify-right-6.png" />
     <Content Include="assets\images\notify-right-red.png" />
