--- a/Shop_03_multiProduct/Shop_03_MultiProduct.csproj
+++ b/Shop_03_multiProduct/Shop_03_MultiProduct.csproj
@@ -163,6 +163,7 @@
     <Content Include="assets\images\brand-logo.jpg" />
     <Content Include="assets\images\btn_remove.png" />
     <Content Include="assets\images\bullet_1.png" />
+    <Content Include="assets\images\category-bg.jpg" />
     <Content Include="assets\images\category-bg.png" />
     <Content Include="assets\images\close-icon.png" />
     <Content Include="assets\images\close_icon.png" />
@@ -174,6 +175,7 @@
     <Content Include="assets\images\cust_right.png" />
     <Content Include="assets\images\english.png" />
     <Content Include="assets\images\fancybox.png" />
+    <Content Include="assets\images\footer-img.png" />
     <Content Include="assets\images\francais.png" />
     <Content Include="assets\images\german.png" />
     <Content Include="assets\images\gray-banner.png" />
@@ -205,12 +207,21 @@
     <Content Include="assets\images\logo.png" />
     <Content Include="assets\images\menu-bag.png" />
     <Content Include="assets\images\menu-img.png" />
+    <Content Include="assets\images\menu-img1.jpg" />
+    <Content Include="assets\images\menu-img2.jpg" />
+    <Content Include="assets\images\menu-img3.jpg" />
+    <Content Include="assets\images\menu-img4.jpg" />
     <Content Include="assets\images\minus-blue.png" />
     <Content Include="assets\images\minus-img.png" />
     <Content Include="assets\images\minus.png" />
     <Content Include="assets\images\newsletter_img.png" />
     <Content Include="assets\images\opc-ajax-loader.gif" />
     <Content Include="assets\images\orange.gif" />
+    <Content Include="assets\images\p1.jpg" />
+    <Content Include="assets\images\payment-1.png" />
+    <Content Include="assets\images\payment-2.png" />
+    <Content Include="assets\images\payment-3.png" />
+    <Content Include="assets\images\payment-4.png" />
     <Content Include="assets\images\plus-blue.png" />
     <Content Include="assets\images\plus-img.png" />
     <Content Include="assets\images\plus.png" />
