--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,34 @@ Anpero/bin/
 AnperoWeb/obj/
 Anpero/obj/Release/
 AnperoFrontend/obj/Release/
-HR_Service_Frontend_01/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
-HR_Service_Frontend_01/bin/Anpero.dll
-AnperoFrontend/obj/Debug/Shop_Frontend_01.csprojResolveAssemblyReference.cache
-AnperoFrontend/obj/Debug/Shop_Frontend_01.csproj.FileListAbsolute.txt
-AnperoFrontend/obj/Debug/AnperoFrontend_01.csprojResolveAssemblyReference.cache
-AnperoFrontend/obj/Debug/AnperoFrontend_01.csproj.FileListAbsolute.txt
+HR_Service_Frontend_01/obj/Release/TransformWebConfig/transformed/Web.config
+HR_Service_Frontend_01/obj/Release/TransformWebConfig/original/Web.config
+HR_Service_Frontend_01/obj/Release/Package/PackageTmp/handler/ProductHandler.ashx
+HR_Service_Frontend_01/obj/Release/Package/PackageTmp/assets/js/theme-script.js
+HR_Service_Frontend_01/obj/Release/Package/PackageTmp/assets/images/loading.gif
+HR_Service_Frontend_01/obj/Release/Package/PackageTmp/assets/html/order.html
+HR_Service_Frontend_01/obj/Release/Package/PackageTmp/assets/html/login.html
+HR_Service_Frontend_01/obj/Release/Package/PackageTmp/assets/html/index6.html
+HR_Service_Frontend_01/obj/Release/Package/PackageTmp/assets/html/index5.html
+HR_Service_Frontend_01/obj/Release/Package/PackageTmp/assets/html/index4.html
+HR_Service_Frontend_01/obj/Release/Package/PackageTmp/assets/html/index3.html
+HR_Service_Frontend_01/obj/Release/Package/PackageTmp/assets/html/index2.html
+HR_Service_Frontend_01/obj/Release/Package/PackageTmp/assets/html/index.html
+HR_Service_Frontend_01/obj/Release/Package/PackageTmp/assets/html/detail3.html
+HR_Service_Frontend_01/obj/Release/Package/PackageTmp/assets/html/detail2.html
+HR_Service_Frontend_01/obj/Release/Package/PackageTmp/Web References/WebService/Location.datasource
+HR_Service_Frontend_01/obj/Release/Package/PackageTmp/Views/Shared/product/_productDetail.cshtml
+HR_Service_Frontend_01/obj/Release/Package/PackageTmp/Views/Shared/_Layout.cshtml
+HR_Service_Frontend_01/obj/Release/Package/PackageTmp/Views/Product/Checkout.cshtml
+HR_Service_Frontend_01/obj/Release/Package/PackageTmp/Views/Home/Index.cshtml
+HR_Service_Frontend_01/obj/Release/Package/PackageTmp/Scripts/jquery.cokie.min.js
+HR_Service_Frontend_01/obj/Release/Package/PackageTmp/Scripts/ShoppingCart.js
+HR_Service_Frontend_01/obj/Release/Package/PackageTmp/Scripts/Bootrap.notify.js
+HR_Service_Frontend_01/obj/Release/Package/PackageTmp/Scripts/Anpero.Common.js
+Shop_01_multiProduct/obj/Release/AspnetCompileMerge/Source/Web References/WebService/Location.datasource
+Shop_01_multiProduct/obj/
+Shop_02_Onepage/obj/
+Shop_02_Onepage/bin/
+Shop_01_multiProduct/bin/
+HR_Service_Frontend_01/obj/
+Shop_03_multiProduct/bin/
