--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ Shop_03_multiProduct/bin/
 Shop_03_multiProduct/obj/Debug/
 BDS_04_BatDongSan_MultiLand/bin/
 BDS_04_BatDongSan_MultiLand/obj/
+Shop_03_multiProduct/obj/
