--- a/BDS_04_BatDongSan_MultiLand/01_BatDongSan_MultiLand.csproj
+++ b/BDS_04_BatDongSan_MultiLand/01_BatDongSan_MultiLand.csproj
@@ -931,7 +931,7 @@
     <Content Include="Scripts\ShoppingCart.js" />
     <Content Include="Views\Product\Index.cshtml" />
     <Content Include="Views\Shared\product\_MenuAndAdsPartial.cshtml" />
-    <Content Include="Views\Product\Category.cshtml" />
+    <Content Include="Views\Product\List.cshtml" />
     <Content Include="Web References\WebService\Ads.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </Content>
