--- a/Shop_02_Onepage/02_Shop_OnePage.csproj
+++ b/Shop_02_Onepage/02_Shop_OnePage.csproj
@@ -252,7 +252,7 @@
     <Content Include="style.css" />
     <Content Include="Views\Product\Index.cshtml" />
     <Content Include="Views\Shared\product\_MenuAndAdsPartial.cshtml" />
-    <Content Include="Views\Product\Category.cshtml" />
+    <Content Include="Views\Product\List.cshtml" />
     <Content Include="Web References\WebService\Ads.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </Content>
