update some layout

--- a/BDS_04_BatDongSan_MultiLand/Web.config
+++ b/BDS_04_BatDongSan_MultiLand/Web.config
@@ -16,8 +16,10 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="shortCacheTime" value="5"/>
-    <add key="storeID" value="27"/>
-    <add key="storeTokenKey" value="33d49a3d-a5cb-4933-a705-bff24158e500"/>
+    <!--<add key="storeID" value="27"/>
+    <add key="storeTokenKey" value="33d49a3d-a5cb-4933-a705-bff24158e500"/>-->
+    <add key="storeID" value="35" />
+    <add key="storeTokenKey" value="4310be99-db17-4c7c-8d63-56a1bf4025b8" />
   </appSettings> 
   <system.web>
     <authentication mode="None"/>
