--- a/BDS_05_BatDongSan_MultiLand/Web.config
+++ b/BDS_05_BatDongSan_MultiLand/Web.config
@@ -16,8 +16,8 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="shortCacheTime" value="5"/>
-    <add key="storeID" value="28" />
-    <add key="storeTokenKey" value="512352de-58a7-4712-8941-84cea28dc707" />
+    <add key="storeID" value="35" />
+    <add key="storeTokenKey" value="4310be99-db17-4c7c-8d63-56a1bf4025b8" />
   </appSettings> 
   <system.web>
     <authentication mode="None"/>
@@ -26,7 +26,7 @@
         <remove assembly="Microsoft.VisualStudio.Web.PageInspector.Loader, Version=1.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"/>
       </assemblies>
     </compilation>
-    <customErrors defaultRedirect="~/" mode="Off">
+    <customErrors defaultRedirect="~/" mode="On">
       <error statusCode="404" redirect="~/404.htm"/>
       <error statusCode="500" redirect="~/500.htm"/>
     </customErrors>
